--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,11 @@
 # Site settings
-title: HMFaysal's Diary
-email: hmfaysal@alum.mit.edu
+title: How's the class?
+email: chosun8do@naver.com
 description: > # this means to ignore newlines until "baseurl:"
   MIT'12 EECS Alum. UPenn'15 ESE PhD Candidate. Hossain Mohammad Faysal is an Electrical Engineer and a Mathematician based in Philadelphia, Pennsylvania. His interests are anything that’s related to math, from math itself to programming languages to music to physics to engineering to philosophy.
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://hmfaysal.github.io" # the base hostname & protocol for your site
-twitter_username: hmfaysal
-github_username:  hmfaysal
 
+favicon : "/img/mark.ico/"
 # Build settings
 markdown: kramdown
